--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
-html{
+html {
   color-scheme: dark light;
 }
 
@@ -109,7 +109,7 @@ h2 {
   cursor: pointer;
   font-weight: bolder;
   display: inline-block;
-  margin-top: 5px;
+  margin-top: 2rem;
 }
 .quiz-box .option-container {
   min-width: 150px;
@@ -160,6 +160,10 @@ h2 {
   animation: fadeIn 0.1s ease forwards;
   position: relative;
   overflow: hidden;
+}
+
+.quiz-box .option-container .option:hover{
+  cursor: pointer;
 }
 
 .quiz-box .option-container .option.already-answered {
